--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -152,6 +152,16 @@ button {
 	}
 }
 
+.blue-btn.blue-btn2 {
+	background-color: @red;
+	border-color: @red;
+}
+
+.blue-btn.blue-btn2:hover {
+	background-color: transparent;
+	color: #fff;
+}
+
 .blue-btn:hover {
 	background-color: rgba(41, 53, 89, 1);
 	color: #e8dc38;
