--- a/src/less/main.less
+++ b/src/less/main.less
@@ -4,6 +4,7 @@
 @import "blocks/_banner.less";
 @import "blocks/_course.less";
 @import "blocks/_for-whom.less";
+@import "blocks/_learn.less";
 
 
 @import "blocks/_gamburger.less";
