--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -5,6 +5,7 @@ block content
 	include ../sections/_banner.pug
 	include ../sections/_course.pug
 	include ../sections/_for-whom.pug
+	include ../sections/_learn.pug
 
 	
 
