--- a/src/less/main.less
+++ b/src/less/main.less
@@ -5,6 +5,10 @@
 @import "blocks/_course.less";
 @import "blocks/_for-whom.less";
 @import "blocks/_learn.less";
+@import "blocks/_spikers.less";
+@import "blocks/_cost.less";
+@import "blocks/_reviews.less";
+@import "blocks/_feedback.less";
 
 
 @import "blocks/_gamburger.less";
