--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -69,26 +69,26 @@ button {
 	}
 }
 
-.container {
-	width: 100%;
-	max-width: 1760px;
-	padding-left: 15px;
-	padding-right: 15px;
-	margin: 0 auto;
+// .container {
+// 	width: 100%;
+// 	max-width: 1760px;
+// 	padding-left: 15px;
+// 	padding-right: 15px;
+// 	margin: 0 auto;
 
-	@media(min-width: 992px) {
-		padding: 0px 25px;
-	}
+// 	@media(min-width: 992px) {
+// 		padding: 0px 25px;
+// 	}
 
-	@media(min-width: 1440px) {
-		padding: 0px 35px;
-	}
+// 	@media(min-width: 1440px) {
+// 		padding: 0px 35px;
+// 	}
 
-	@media(min-width: 1920px) {
-		padding: 0px;
-	}
+// 	@media(min-width: 1920px) {
+// 		padding: 0px;
+// 	}
 
-}
+// }
 
 .red-button {
 	text-transform: uppercase;
