--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,10 +6,14 @@ block content
 	include ../sections/_course.pug
 	include ../sections/_for-whom.pug
 	include ../sections/_learn.pug
+	include ../sections/_spikers.pug
+	include ../sections/_cost.pug
+	include ../sections/_reviews.pug
+	include ../sections/_feedback.pug
 
 	
 
 
 block variables
-	-var title = "Page";
+	-var title = "Главная | HK Business School";
 	
