--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,6 +10,7 @@ block content
 	include ../sections/_cost.pug
 	include ../sections/_reviews.pug
 	include ../sections/_feedback.pug
+	include ../sections/_footer.pug
 
 	
 
