--- a/src/less/main.less
+++ b/src/less/main.less
@@ -9,6 +9,7 @@
 @import "blocks/_cost.less";
 @import "blocks/_reviews.less";
 @import "blocks/_feedback.less";
+@import "blocks/_footer.less";
 
 
 @import "blocks/_gamburger.less";
