--- a/src/pug/sections/_feedback.pug
+++ b/src/pug/sections/_feedback.pug
@@ -13,8 +13,11 @@ section.feedback
 								input(type="text" name="whatsApp" placeholder="WhatsApp")
 							.form-row
 								input(type="email" name="email" placeholder="E-mail")
-							.form-row
-								textarea(type="text" name="message" placeholder="Сообщение")
+								
+							.form-row.form-row-message
+								textarea(type="text" name="message" rows="2" placeholder="Сообщение")
+							.form-btn
+								input(type="submit" value="Отправить")
 							
 				.col-md-5
 					.feedback-curator
@@ -23,4 +26,14 @@ section.feedback
 							.img-title 
 								p Ольга
 								p Куратор курса
-				
+						.curator-contacts
+							p
+								a(href="mailto:olga@hkbusinessschool.com")
+									i.fas.fa-envelope-open-text
+									span.contact-val olga@hkbusinessschool.com
+
+							p
+								a(href="mailto:olga@hkbusinessschool.com")
+									i.fab.fa-facebook-square
+									span.contact-val facebook
+									
