--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -1,4 +1,16 @@
 footer.footer
 	.container
 		.footer-menu
+			nav.header-nav
+				a(href="#header").header-nav-item Главная
+				a(href="#").header-nav-item О курсе
+				a(href="#").header-nav-item Для кого
+				a(href="#").header-nav-item Структура курса
+				a(href="#").header-nav-item Спикеры
+				a(href="#").header-nav-item Стоимость
+				a(href="#").header-nav-item Отзывы
+				a(href="#").header-nav-item Контакты
+			a(href="terms-of-use.html" target="_blank").header-nav-item.footer-link Terms-of-use
 		.footer-copyright
+			p По всем вопросам обращаться: olga@hkbusinessschool.com
+			p &copy; 2020 Hong Kong Business school. All rights reserved.
