--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -23,5 +23,6 @@ html(lang='ru')
 
 		script(src="libs/jquery/jquery-3.0.0.min.js")
 		script(src="libs/bootstrap/bootstrap.min.js")
+		script(src="libs/nav.js/nav.js")
 		script(src="js/gamburger.js")
 		script(src='js/main.js')
