--- a/src/pug/sections/_banner.pug
+++ b/src/pug/sections/_banner.pug
@@ -18,5 +18,5 @@ header.header#header
 						p Старт 18&nbsp;мая&nbsp;2020
 
 				.col-50.col-50--btn
-					button.red-button узнать больше
+					button.red-button(data-toggle="modal" data-target="#callForm") узнать больше
 		
