--- a/src/pug/sections/_course.pug
+++ b/src/pug/sections/_course.pug
@@ -1,4 +1,4 @@
-section.course
+section.course#course
 	.container-fluid
 		.course-content
 			.row
@@ -43,7 +43,7 @@ section.course
 									p Только в мае Вы можете купить курс с супер скидкой 50% и получить индивидуальный подход в связи с тем, что набор в группу ограничен (всего 10 человек).
 
 						.btn-wrapper
-							button.blue-btn записаться на бесплатную консультацию
+							button.blue-btn(data-toggle="modal" data-target="#callForm") записаться на бесплатную консультацию
 				.col-lg-6.order-lg-1.col-xl-5
 					.course-img
 						img(src="img/course.webp", alt="img")
