--- a/src/pug/sections/_feedback.pug
+++ b/src/pug/sections/_feedback.pug
@@ -1,6 +1,6 @@
-section.feedback
+section.feedback#feedback
 	.container
-		h2.section-title Хотите получить бесплатную консультацию и 65% скидки на курс?
+		h2.section-title Хотите получить бесплатную консультацию и 50% скидки на курс?
 		.feedback-content
 			.row
 				.col-md-7
@@ -33,7 +33,7 @@ section.feedback
 									span.contact-val olga@hkbusinessschool.com
 
 							p
-								a(href="mailto:olga@hkbusinessschool.com")
+								a(href="https://www.facebook.com/techblonde" target="_blank")
 									i.fab.fa-facebook-square
 									span.contact-val facebook
 									
