--- a/src/pug/sections/_learn.pug
+++ b/src/pug/sections/_learn.pug
@@ -1,4 +1,4 @@
-section.structure
+section.structure#structure
 	.container
 		.structure-content
 			h2.section-title Структура курса
@@ -65,5 +65,5 @@ section.structure
 							li Как правильно презентовать свой проект потенциальным клиентам и партнёрам
 							li Особенности делового этика Китая 
 			.btn-wrapper
-				button.blue-btn.blue-btn2 записаться на бесплатную консультацию
+				button.blue-btn.blue-btn2(data-toggle="modal" data-target="#callForm") записаться на бесплатную консультацию
 	.parallax
