--- a/src/pug/sections/_reviews.pug
+++ b/src/pug/sections/_reviews.pug
@@ -1,4 +1,4 @@
-section.reviews
+section.reviews#reviews
 	.container
 		.reviews-content
 			h2.section-title Отзывы
@@ -7,10 +7,10 @@ section.reviews
 					.reviews-author
 						.rev-img
 							img(src="img/rev1.webp", alt="photo")
-						a(href="#").social-link in
+						a(href="https://www.linkedin.com/in/dima-raketa-902846158/" target="_blank").social-link in
 					.reviews-text
 						h4 Дмитрий Ракитянский
-						p.status CEO #[a(href="#")  Reputation House] (Гонконг)
+						p.status CEO #[a(href="https://reputation.house/" target="_blank")  Reputation House] (Гонконг)
 						.text 
 							p Мы открыли компанию в Гонконге чуть более года назад. Наша основная деятельность: управление репутацией в интернете.
 							p Решение запустить представительство в другой стране и расширить географию клиентов было авантюрным, но оно уже дает свои плоды, и мы ни разу не пожалели.
@@ -19,7 +19,7 @@ section.reviews
 				.reviews-item.reviews-text--reverse
 					.reviews-text
 						h4 Никита Сычев
-						p.status Основатель компании #[a(href="https://www.linkedin.com/in/dima-raketa-902846158/" target="_blank")  D2R2] (Гонконг)
+						p.status Основатель компании #[a(href="https://www.d2r2.com/" target="_blank")  D2R2] (Гонконг)
 						.text 
 							p 2 года назад я приехал в Гонконг и влюбился в этот город и в Китай в целом. Мы всей компанией начали изучать другой рынок, другие маркетинговые инструменты, другой подход к дизайну.
 							p За этот период мы сотрудничали с несколькими азиатскими компаниями и на практике убедились насколько там процесс работы, переговоров и просто потребительского поведения людей отличается от привычного нам.
