--- a/src/less/blocks/_course.less
+++ b/src/less/blocks/_course.less
@@ -58,6 +58,18 @@
 	font-family: @custom;
 	text-align: center;
 
+	@media(max-width:1439px) {
+		font-size: 44px;
+	}
+
+	@media(max-width:1199px) {
+		font-size: 38px;
+	}
+
+	@media(max-width:991px) {
+		font-size: 36px;
+	}
+
 	@media(max-width:767px) {
 		font-size: 33px;
 	}
