--- a/src/less/blocks/_header.less
+++ b/src/less/blocks/_header.less
@@ -24,7 +24,8 @@
 	}
 
 	@media(max-width:767px) {
-		width: 80px;
+		width: 25%;
+		max-width: 320px;
 	}
 }
 
@@ -126,7 +127,7 @@
 	}
 }
 
-.header-nav-item.active,
+.header-nav li.active a,
 .header-nav-item:hover {
 	color: @red;
 }
