--- a/src/less/blocks/_spikers.less
+++ b/src/less/blocks/_spikers.less
@@ -56,6 +56,10 @@
 		min-height: 60px;
 		position: relative;
 
+		@media(max-width:1439px) {
+			font-size: 25px;
+		}
+
 		.social-link {
 			display: inline-block;
 			top: -70px;
@@ -146,4 +150,81 @@
 	img {
 		object-fit: cover;
 	}
+}
+
+.spikers-card .modal-dialog {
+	max-width: 450px;
+	width: 95%;
+
+	button.close {
+		width: 40px;
+		position: absolute;
+		right: 0;
+		top: 0px;
+		font-size: 40px;
+		z-index: 5;
+		border: 0px;
+		color: @red;
+	}
+}
+
+.spikers-card-modal {
+	background-color: @blue;
+	max-width: 450px;
+	padding-bottom: 50px;
+	position: relative;
+
+	.social-link {
+		position: absolute;
+		bottom: 10px;
+		left: 50%;
+		transform: translateX(-50%);
+		width: 40px;
+		height: 40px;
+		border: 2px solid @blue;
+		color: @blue;
+		border-radius: 50%;
+		text-align: center;
+		line-height: 40px;
+		font-size: 24px;
+		font-weight: 700;
+		background-color: #fff;
+		.tr;
+
+		&:after {
+			display: none;
+		}
+
+		&:hover {
+			border-radius: 0;
+		}
+	}
+
+	.card-img {
+		background-size: cover;
+		background-position: center top;
+		background-repeat: no-repeat;
+		height: 380px;
+		width: 100%;
+		border-radius: 0px;
+	}
+
+	.desk {
+		padding-bottom: 30px;
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+}
+
+.modal-content .desk a {
+	margin-bottom: 0;
+}
+
+.modal-content .desk a:after {
+	display: none;
+}
+
+.modal-content .desk p {
+	font-size: 16px;
+	padding-bottom: 8px;
 }
