--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -55,11 +55,15 @@ button {
 }
 
 .small-container {
-	width: 50%;
+	width: 60%;
 	.m-auto;
 
 	@media(max-width:1199px) {
-		width: 60%;
+		width: 68%;
+	}
+
+	@media(max-width:991px) {
+		width: 80%;
 	}
 
 	@media(max-width:767px) {
