--- a/src/less/blocks/_reviews.less
+++ b/src/less/blocks/_reviews.less
@@ -1,5 +1,5 @@
 .reviews {
-	padding-top: 60px;
+	padding-top: 66px;
 	padding-bottom: 25px;
 	background-color: @blue;
 
@@ -30,7 +30,7 @@
 }
 
 .reviews-text--reverse {
-	text-align: right;
+	// text-align: right;
 
 	.reviews-author {
 		margin-right: 0;
