--- a/src/less/blocks/_spikers.less
+++ b/src/less/blocks/_spikers.less
@@ -1,5 +1,6 @@
 .spikers {
-
+	padding-top: 66px;
+	margin-top: -66px;
 	padding-bottom: 40px;
 	background-color: @blue;
 }
@@ -26,7 +27,7 @@
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
-	padding-top: 50px;
+	padding-top: 15px;
 	padding-bottom: 20px;
 }
 
