--- a/src/pug/sections/_banner.pug
+++ b/src/pug/sections/_banner.pug
@@ -1,4 +1,4 @@
-header.header#header
+header.header#banner
 	.container
 		.header-content
 			h1  #[span Онлайн курс:] #[span Как успешно вывести свой бизнес в Китай.]  #[span Валютная выручка + Рынок размером 1.4 миллиарда человек!]
@@ -6,16 +6,15 @@ header.header#header
 				.video
 					iframe(width="100%" height="100%" src="https://www.youtube.com/embed/0562HOXwDvU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
 					.logo-img-desk
-						img(src="img/logo.webp", alt="logo")
-				
+						img(src="img/logo.jpg", alt="logo")
 	
 			.header-slogan
-				.col-50.col-50--border
-					.logo-img-mob
-						img(src="img/logo.webp", alt="logo")
-					.col-50--text
+				.col-50--text
+					.col-string
 						p Скидка  #[span 50%]
 						p Старт 18&nbsp;мая&nbsp;2020
+					.col-string--link
+						a(href="https://probusiness.io/experience/7104-kitaycy-negovoryat-net-ischitayut-russkie-dengi-toksichnymi-devushka-perezhila-pandemiyu-vgonkonge-iuznala-sekret-zhivuchesti-mestnogo-biznesa.html" target="_blank") СМИ о нас
 
 				.col-50.col-50--btn
 					button.red-button(data-toggle="modal" data-target="#callForm") узнать больше
