--- a/src/pug/sections/_cost.pug
+++ b/src/pug/sections/_cost.pug
@@ -2,26 +2,27 @@ section.cost#cost
 	.container
 		.cost-content
 			h2.section-title Стоимость
-			.row
-				.col-md-6
-					.cost-price
-						h3 Онлайн курс:
-							|
-							br
-							|Как успешно вывести свой бизнес в Китай
-						ul
-							li Индивидуальная консультация перед началом обучения
-							li 10 уроков от международных экспертов с опытом работы в Китае от 10 лет
-							li Ведение куратором в течении всего курса
-						.price-block
-							p.price-title ЦЕНА:
-							p.new-price 9 900 руб
-							p.old-price 30 000 руб
-				.col-md-6
-					.cost-info
-						.cost-sale
-							p 50% скидка на покупку курса только в мае!
-							.btn-wrapper
-								button.blue-btn купить сейчас
-						.post-scriptum
-							p *Если после первой консультации Вы поймёте, что курс Вам не интересен, мы вернём Вам деньги!
+			.cost-block
+				.row
+					.col-md-6
+						.cost-price
+							h3 Онлайн курс:
+								|
+								br
+								|Как успешно вывести свой бизнес в Китай
+							ul
+								li Индивидуальная консультация перед началом обучения
+								li 10 уроков от международных экспертов с опытом работы в Китае от 10 лет
+								li Ведение куратором в течении всего курса
+							.price-block
+								p.price-title ЦЕНА:
+								p.new-price 9 900 руб
+								p.old-price 30 000 руб
+					.col-md-6
+						.cost-info
+							.cost-sale
+								p #[span.sale-val 50% ] скидка на покупку курса только в мае!
+								.btn-wrapper
+									button.blue-btn купить сейчас
+							.post-scriptum
+								p *Если после первой консультации Вы поймёте, что курс Вам не интересен, мы вернём Вам деньги!
