--- a/src/pug/sections/_course.pug
+++ b/src/pug/sections/_course.pug
@@ -46,4 +46,4 @@ section.course#course
 							button.blue-btn(data-toggle="modal" data-target="#callForm") записаться на бесплатную консультацию
 				.col-lg-6.order-lg-1.col-xl-5
 					.course-img
-						img(src="img/course.webp", alt="img")
+						img(alt="img" class="lazy" data-src="img/course.jpg" )
