--- a/src/pug/sections/_for-whom.pug
+++ b/src/pug/sections/_for-whom.pug
@@ -7,7 +7,7 @@ section.for-whom#forWhom
 					.grid-item.grid-item--top
 						.grid-item__col
 							.grid-item-img
-								img(src="img/photo1.webp", alt="photo")
+								img(class="lazy" data-src="img/photo1.jpg", alt="photo")
 						.grid-item__col
 							.grid-item-text
 								h3 Владельцам бизнеса
@@ -19,13 +19,13 @@ section.for-whom#forWhom
 								p Многие знают, что в Китае ежегодно раздают несколько сотен грантов и всячески поддерживают инновационный бизнес. В рамках курса Вы узнаете, стоит ли пробовать свои силы и примете решение: Долина или все же Китай.
 						.grid-item__col
 							.grid-item-img
-								img(src="img/photo3.webp", alt="photo")
+								img(class="lazy" data-src="img/photo3.jpg", alt="photo")
 					
 				.grid-column
 					.grid-item.grid-item--top
 						.grid-item__col
 							.grid-item-img
-								img(src="img/photo2.webp", alt="photo")
+								img(class="lazy" data-src="img/photo2.jpg", alt="photo")
 						.grid-item__col
 							.grid-item-text
 								h3 Амбициозным специалистам
@@ -38,4 +38,4 @@ section.for-whom#forWhom
 								p.lh-12 Ваша компания уже приняла решение выходит на рынок Китая, но как это сделать пока никто в Вшей команде не знает? В рамках курса у вас все встанет на свои места и вы сможете создать эффективную стратегию выхода на новый неизведанный рынок.
 						.grid-item__col
 							.grid-item-img
-								img(src="img/photo4.webp", alt="photo")
+								img(class="lazy" data-src="img/photo4.jpg", alt="photo")
