--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -5,7 +5,7 @@
 				span Hong Kong Business School
 			ul.header-nav
 				li.active
-					a(href="#header").header-nav-item Главная
+					a(href="#banner").header-nav-item Главная
 				li
 					a(href="#course").header-nav-item О курсе
 				li
