--- a/src/pug/sections/_reviews.pug
+++ b/src/pug/sections/_reviews.pug
@@ -6,7 +6,7 @@ section.reviews#reviews
 				.reviews-item
 					.reviews-author
 						.rev-img
-							img(src="img/rev1.webp", alt="photo")
+							img(src="img/rev1.jpg", alt="photo")
 						a(href="https://www.linkedin.com/in/dima-raketa-902846158/" target="_blank").social-link in
 					.reviews-text
 						h4 Дмитрий Ракитянский
@@ -27,5 +27,5 @@ section.reviews#reviews
 
 					.reviews-author
 						.rev-img
-							img(src="img/rev2.webp", alt="photo")
+							img(src="img/rev2.jpg", alt="photo")
 						a(href="https://www.facebook.com/nikitabanme https://www.facebook.com/nikitabanme " target="_blank").social-link in
