--- a/src/less/blocks/_footer.less
+++ b/src/less/blocks/_footer.less
@@ -52,3 +52,89 @@
 		line-height: 1.5;
 	}
 }
+
+#termsModal .modal-dialog {
+	width: 95%;
+	max-width: 1000px;
+
+	button.close {
+		width: 40px;
+		height: 40px;
+		color: @red;
+		font-size: 30px;
+	}
+
+}
+
+#termsModal .modal-content {
+	padding-bottom: 60px;
+
+
+	p {
+		color: #2F2E2E;
+		font-size: 25px;
+		line-height: 1.3;
+
+		@media(max-width:1439px) {
+			font-size: 20px;
+		}
+
+		@media(max-width:1199px) {
+			font-size: 18px;
+		}
+
+		@media(max-width:991px) {
+			font-size: 16px;
+		}
+	}
+
+	h3 {
+		font-size: 35px;
+		color: #2F2E2E;
+		font-weight: 700;
+		margin-bottom: 1em;
+		margin-top: 1em;
+
+		@media(max-width:1439px) {
+			font-size: 32px;
+		}
+
+		@media(max-width:1199px) {
+			font-size: 28px;
+		}
+
+		@media(max-width:991px) {
+			font-size: 26px;
+		}
+	}
+
+	ul {
+		list-style-type: disc;
+		color: #2F2E2E;
+		margin-left: 30px;
+
+		li {
+			font-size: 24px;
+
+			@media(max-width:1439px) {
+				font-size: 20px;
+			}
+
+			@media(max-width:1199px) {
+				font-size: 18px;
+			}
+
+			@media(max-width:991px) {
+				font-size: 16px;
+			}
+		}
+	}
+
+	h3:last-of-type {
+		margin-top: 3em;
+	}
+
+	h3:first-of-type {
+		margin-top: .2em;
+	}
+}
