--- a/src/less/blocks/_for-whom.less
+++ b/src/less/blocks/_for-whom.less
@@ -1,7 +1,19 @@
 .for-whom {
-	padding-top: 15px;
+	padding-top: 66px;
+	margin-top: -66px;
 	padding-bottom: 40px;
 	background-color: @blue;
+	height: auto;
+	min-height: 850px;
+
+	@media(max-width:1439px) {
+		height: 100vh;
+		min-height: unset;
+	}
+
+	@media(max-width:1199px) {
+		height: auto;
+	}
 }
 
 .for-whom-content {
@@ -14,12 +26,35 @@
 	}
 }
 
+// .grid-block {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	padding-top: 40px;
+// 	padding-left: 40px;
+// 	padding-right: 40px;
+
+// 	@media(max-width:1199px) {
+// 		max-width: 500px;
+// 		padding-left: 0px;
+// 		padding-right: 0px;
+// 		.m-auto;
+// 	}
+
+// 	@media(max-width:767px) {
+// 		max-width: 400px;
+
+// 	}
+
+// }
 .grid-block {
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 40px;
-	padding-left: 40px;
-	padding-right: 40px;
+	max-width: 900px;
+	.m-auto;
+	background-color: #dedede;
+	margin-top: 25px;
+
+
 
 	@media(max-width:1199px) {
 		max-width: 500px;
@@ -47,6 +82,7 @@
 	width: 100%;
 	display: flex;
 	font-family: @custom;
+	border: 2px solid #fff;
 
 	.grid-item__col {
 		width: 50%;
@@ -63,6 +99,8 @@
 		line-height: 1.3;
 		padding-bottom: 5px;
 		color: #fff;
+		color: @blue;
+		color: @red;
 
 		@media(max-width:767px) {
 			text-align: center;
@@ -74,6 +112,7 @@
 	p {
 		font-size: 16px;
 		line-height: 1.5;
+		color: @blue;
 		// padding-right: 20px;
 
 
@@ -126,6 +165,8 @@
 	padding-left: 8px;
 	padding-right: 8px;
 	padding-top: 6px;
+	// padding-top: 70px;
+	// margin-top: -70px;
 
 	@media(max-width:1199px) {
 		padding-top: 20px;
@@ -145,7 +186,7 @@
 }
 
 .grid-item--top .grid-item-img:before {
-	content: '';
+	// content: '';
 	width: 0px;
 	height: 0px;
 	border: 50px solid @blue;
@@ -165,7 +206,7 @@
 }
 
 .grid-item--bottom .grid-item-img:before {
-	content: '';
+	// content: '';
 	width: 0px;
 	height: 0px;
 	position: absolute;
