--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -25,4 +25,7 @@ html(lang='ru')
 		script(src="libs/bootstrap/bootstrap.min.js")
 		script(src="libs/nav.js/nav.js")
 		script(src="js/gamburger.js")
+		script(src="js/jquery.lazy.min.js")
+		script(src="js/jquery.lazy.plugins.min.js")
+		script(src="js/jquery.maskedinput.min.js")
 		script(src='js/main.js')
