--- a/src/pug/sections/_feedback.pug
+++ b/src/pug/sections/_feedback.pug
@@ -10,7 +10,7 @@ section.feedback#feedback
 							.form-row
 								input(type="text" name="userName" placeholder="Имя")
 							.form-row
-								input(type="text" name="whatsApp" placeholder="WhatsApp")
+								input(type="text" name="whatsApp" placeholder="WhatsApp" class="phone")
 							.form-row
 								input(type="email" name="email" placeholder="E-mail")
 								
@@ -18,11 +18,12 @@ section.feedback#feedback
 								textarea(type="text" name="message" rows="2" placeholder="Сообщение")
 							.form-btn
 								input(type="submit" value="Отправить")
+						#answer2
 							
 				.col-md-5
 					.feedback-curator
 						.curator-img
-							img(src="img/curator.webp", alt="OlgaFilatova")
+							img(class="lazy" data-src="img/curator.jpg", alt="OlgaFilatova")
 							.img-title 
 								p Ольга
 								p Куратор курса
