--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -2,7 +2,7 @@ footer.footer#footer
 	.container
 		.footer-menu
 			nav.header-nav
-				a(href="#header").header-nav-item Главная
+				a(href="#banner").header-nav-item Главная
 				a(href="#course").header-nav-item О курсе
 				a(href="#forWhom").header-nav-item Для кого
 				a(href="#structure").header-nav-item Структура курса
@@ -10,7 +10,7 @@ footer.footer#footer
 				a(href="#cost").header-nav-item Стоимость
 				a(href="#reviews").header-nav-item Отзывы
 				a(href="#feedback").header-nav-item Контакты
-			a(href="terms-of-use.html" target="_blank").header-nav-item.footer-link Terms-of-use
+			a(href="terms-of-use.html" target="_blank" data-toggle="modal" data-target="#termsModal").header-nav-item.footer-link Terms-of-use
 		.footer-copyright
 			p По всем вопросам обращаться: olga@hkbusinessschool.com
 			p &copy; 2020 Hong Kong Business school. All rights reserved.
@@ -23,17 +23,156 @@ footer.footer#footer
 					span(aria-hidden="true") ×
 			.modal-body
 				.feedback-form
-					form(action="")#contact-form
+					form(action="")#consultant-form
 						input(type="hidden", name="button-type" value="Бесплатная консультация")
 						p Получить консультацию
 						.form-row
 							input(type="text" name="userName" placeholder="Имя")
 						.form-row
-							input(type="text" name="whatsApp" placeholder="WhatsApp")
+							input(type="text" name="whatsApp" placeholder="WhatsApp" class="phone")
 						.form-row
 							input(type="email" name="email" placeholder="E-mail")
-							
-						//- .form-row.form-row-message
-						//- 	textarea(type="text" name="message" rows="2" placeholder="Сообщение")
 						.form-btn
 							input(type="submit" value="Отправить")
+					#answer
+// modal Term					
+#termsModal.modal.fade(tabindex="-1" role="dialog"  aria-hidden="true")
+	.modal-dialog.modal-dialog-centered(role="document")
+		.modal-content
+			.modal-form-title
+				button.close(type="button" data-dismiss="modal" aria-label="Close")
+					span(aria-hidden="true") ×
+			.modal-body
+				h3 Пользовательское соглашение
+
+				p Владелец сайта hkbusinessschool.com (далее HKBS) обязуется сохранять Вашу конфиденциальность в сети Интернет. Настоящая Политика конфиденциальности, рассказывает о том, как собираются, обрабатываются и хранятся Ваши личные данные. HKBS уделяет большое внимание защите личной информации пользователей. Пользуясь сайтом hkbusinessschool.com, пользователь тем самым дает согласие на применение правил сбора и использования данных, изложенных в настоящем документе.
+				p Если Вы не согласны с условиями нашей политики конфиденциальности, не используйте сайт hkbusinessschool.com!
+				
+				h3 1. Термины и определения
+				p «Онлайн-курс» – массовый открытый онлайн курс, разработанный Правообладателями и размещенный на Портале, реализуемый с применением электронного обучения и дистанционных образовательных технологий.
+
+				p «Услуги» – доведение онлайн-курсов по сети Интернет до Пользователя путем предоставления Пользователю доступа к онлайн-курсам и обеспечения Просмотра выбранного им онлайн-курса.
+
+				p «Пользователь» – любое физическое лицо, принявшее настоящее предложение, зарегистрированное на Портале, получившее доступ к Порталу посредством сети Интернет, достигшее возраста, допустимого в соответствии с законодательством Российской Федерации для акцепта настоящей публичной оферты, и обладающее соответствующими полномочиями.
+
+				p «Регистрация» – действия Пользователя по заполнению и отправке регистрационной формы, размещенной на Портале, которые, в случае отсутствия у Оператора Портала возражений по регистрации Пользователя, влекут за собой создание учетной записи Пользователя с присвоением логина и пароля для доступа к Порталу.
+
+				p «Авторизация» – введение Пользователем своего логина и пароля для входа в свою учетную запись на Портале.
+
+				p «Правообладатель» – общеобразовательная организация, профессиональная образовательная организация, образовательная организация высшего образования, организация дополнительного образования или организация дополнительного профессионального образования, обладающая исключительным правом на онлайн-курсы и заключившая с Оператором Портала лицензионный или агентский договор о предоставлении Оператору Портала права использования онлайн-курсов теми способами и в том объеме, которые необходимы и достаточны для оказания Услуг Пользователям.
+
+				p «Просмотр» – реализованный Пользователем доступ к онлайн-курсам в сети Интернет, в течение которого Пользователь может смотреть (слушать) онлайн-курс из любого места и в любое время по своему выбору посредством соответствующих технических устройств.
+
+				h3 2. Общие положения
+				p 2.1. В соответствии со статьей 437 Гражданского кодекса Российской Федерации, настоящее Пользовательское соглашение является официальным, публичным и безотзывным предложением (публичной офертой) Оператора Портала, адресованным Пользователям, заключить договор на указанных ниже условиях.
+
+				p Пользователь обязан полностью ознакомиться с настоящей публичной офертой до момента регистрации на Портале.
+
+				p 2.2. Полным и безоговорочным акцептом настоящей публичной оферты является совершение Пользователем действий, выражающихся в последовательном выполнении всех регистрационных процедур и активации учетной записи Пользователя.
+
+				p 2.3. Акцепт оферты означает, что Пользователь согласен со всеми положениями настоящей публичной оферты и обязуется им следовать. С момента акцепта Пользователем настоящего предложения данное предложение считается Пользовательским соглашением, заключенным между Оператором Портала и Пользователем на условиях, установленных в настоящем предложении.
+
+				p 2.4. В отношении функционирования и развития Портала Оператор Портала руководствуется законодательством Российской Федерации, настоящим Пользовательским соглашением и иными специальными документами, которые разработаны или могут быть разработаны и приняты Оператором Портала в целях регламентации предоставления Пользователям доступа к функционалу Порталу.
+				h3 3. Предмет соглашения и порядок оказания Услуг
+				p 3.1. Оператор Портала обязуется на условиях, установленных настоящим Пользовательским соглашением, предоставлять Пользователю доступ к онлайн-курсам для бесплатного Просмотра, а Пользователь обязуется надлежащим образом выполнять условия, установленные настоящим Соглашением.
+
+				p 3.2. Для получения Пользователем доступа к онлайн-курсам требуется регистрация Пользователя на Портале.
+
+				p 3.3. Стоимость услуг по настоящему Пользовательскому соглашению составляет 1 рубль, в том числе НДС 20%. Услуги оказываются Пользователю безвозмездно.
+
+				h3 4. Регистрация Пользователя
+				p 4.1. Для регистрации Пользователя на Портале Пользователь обязуется предоставить Оператору Портала регистрационную форму (анкету), заполнив её достоверной, полной и точной информацией о себе, и поддерживать ее в актуальном виде.
+
+				p 4.2. Пользователь соглашается с тем, что действия, совершенные на Портале после Авторизации Пользователя (по его логину и паролю), признаются действиями Пользователя.
+
+				p 4.3. Регистрируясь на Портале, Пользователь дает согласие на получение информационных сообщений на указанный при регистрации адрес электронной почты.
+
+				p 4.4. При регистрации на Портале Пользователь обязан предоставить Оператору Портала необходимую достоверную и актуальную информацию для формирования учетной записи Пользователя, включая уникальные для каждого Пользователя логин и пароль доступа к Порталу, а также фамилию и имя. Регистрационная форма Портала может запрашивать у Пользователя дополнительную информацию.
+
+				p 4.5. Пользователь несет ответственность за достоверность, актуальность, полноту и соответствие законодательству Российской Федерации предоставленной при регистрации информации и ее чистоту от претензий третьих лиц.
+
+				p 4.6. После предоставления информации, Пользователю необходимо пройти ряд удостоверительных процедур, а именно:
+
+				p подтвердить свою регистрацию путем активации учетной записи через сообщение, отправленное Оператором Портала на электронную почту Пользователя.
+				p Оператор Портала может использовать дополнительные процедуры, включая:
+				ul
+
+					li предложение Пользователю подтвердить регистрацию путем распознания автоматизированного теста, предназначенного для различия компьютеров и людей («капча»);
+
+					li отправку кода регистрации посредством sms-сообщения на мобильный телефон Пользователя, номер которого предоставляется самим Пользователем.
+				p В случае верного последовательного выполнения всех регистрационных действий на Сайте создается учетная запись Пользователя.
+
+				p 4.7. Пользователь на используемом им аппаратно-программном обеспечении может разрешить хранение логина и пароля (с использованием файлов cookies или аналогичных технологий) для последующей автоматической авторизации на Портале.
+
+				p 4.8. Пользователь несет ответственность за безопасность логина и пароля, а также за все действия, совершенные Пользователем после Авторизации. Пользователь обязан немедленно уведомить Оператора Портала о любом случае неавторизированного доступа с его логином и паролем и/или о любом нарушении безопасности. Оператор Портала не несет ответственности за ущерб, причиненный в результате несанкционированного доступа к учетной записи Пользователя.
+
+				p 4.9. В случае передачи Пользователем логина и пароля какому-либо третьему лицу, всю ответственность за действия этого третьего лица, совершенные на Портале, несет Пользователь.
+				h3 5. Условия использования онлайн-курсов
+				p 5.1. Онлайн-курсы доступны Пользователю для Просмотра на Портале в целях их освоения без дальнейшего оценивания результатов освоения и без получения документов, свидетельствующих об освоении курсов.
+
+				p 5.2. Пользователь не должен нарушать, блокировать или иным образом наносить ущерб каким-либо средствам безопасности Портала, а также средствам, предотвращающим или ограничивающим использование или копирование какого-либо онлайн-курса.
+
+				p 5.3. Пользователь вправе использовать онлайн-курсы исключительно путем частного Просмотра и не вправе использовать онлайн-курсы (частично или полностью) иным способом, в частности в коммерческих или иных целях, за исключением указанных в пункте 5.1 настоящего Пользовательского соглашения.
+
+				p Какое-либо иное использование онлайн-курсов является нарушением настоящего Пользовательского соглашения, охраняемых законом интеллектуальных прав Правообладателей, и может повлечь привлечение к ответственности в соответствии с законодательством Российской Федерации.
+
+				h3 6. Права и обязанности Сторон
+				p 6.1. Оператор Портала вправе:
+
+				p 6.1.1. по своему собственному усмотрению приостанавливать, ограничивать или прекращать доступ Пользователя ко всем или к любому из разделов или сервисов Портала;
+
+				p 6.1.2. устанавливать любые ограничения в использовании Портала, в любое время изменять настоящее Пользовательское соглашение в одностороннем порядке, опубликовав на Портале новую редакцию настоящей публичной оферты Оператора Портала, без получения согласия Пользователя.
+
+				p 6.2. Оператор Портала обязан:
+
+				p 6.2.1. предпринимать все зависящие от него действия для обеспечения бесперебойной работы Портала, однако он не несет ответственности за перерывы в его работе (в т.ч. аварийные, профилактические), за недостаточное качество или скорость предоставления данных, за полную или частичную утрату каких-либо данных, размещенных на Портале, или за причинение любых других убытков, которые возникли или могут возникнуть при пользовании Порталом.
+
+				p 6.3. Пользователь обязан:
+
+				p 6.3.1. не вводить Оператора Портала и/или других Пользователей в заблуждение относительно своей личности;
+
+				p 6.3.2. не осуществлять действий, направленных на получение доступа к чужой учетной записи, путем подбора логина и пароля, взлома или иных действий.
+
+				p 6.3.3. самостоятельно следить за изменениями условий настоящего Пользовательского соглашения на Портале.
+				h3 7. Ответственность
+				p 7.1. Оператор Портала не несет ответственности за любые убытки, произошедшие из-за использования онлайн-курсов либо невозможности доступа к онлайн-курсам, несанкционированного доступа к коммуникациям Пользователя, заявления или поведения любого третьего лица на Портале.
+
+				p 7.2. Пользователь и Оператор Портала соглашаются, что все споры и разногласия, которые могут возникнуть из настоящего Пользовательского соглашения или в связи с ним, будут разрешаться путем переговоров. Если согласие не будет достигнуто, все споры по поводу настоящего Пользовательского соглашения разрешаются согласно нормам российского права.
+
+				p 7.3. Признание судом какого-либо положения настоящего Пользовательского соглашения недействительным или не подлежащим принудительному исполнению не влечет недействительности или неисполнимости иных положений Договора.
+
+				p 7.4. Бездействие со стороны Оператора Портала в случае нарушения Пользователем каких-либо положений настоящего Пользовательского соглашения не лишает Оператора Портала права предпринять соответствующие действия в защиту своих интересов позднее, а также не означает отказа Оператора Портала от своих прав в случае совершения в дальнейшем подобных либо сходных нарушений или нарушений других положений настоящего Пользовательского соглашения.
+
+				h3 8. Персональные данные
+				p 8.1. Акцептуя настоящее предложение Пользовательского соглашения, Пользователь предоставляет свое согласие на обработку своих персональных данных, как без использования средств автоматизации, так и с их использованием.
+
+				p 8.2. Согласие дается на обработку следующих персональных данных Пользователя: фамилия, имя, отчество, адреса регистрации, постоянного проживания, дата и места рождения, сведения о навыках и квалификации (образовании, ученых степени и звании, опыте), адрес личной электронной почты.
+
+				p 8.3. Персональные данные не являются общедоступными.
+
+				p 8.4. Персональные данные Пользователя обрабатываются в целях предоставления доступа к онлайн-курсам для бесплатного просмотра и прослушивания онлайн-курсов.
+
+				p 8.5. Основанием для обработки персональных данных Пользователя являются ст. 24 Конституции Российской Федерации, ст.6 Федерального закона №152-ФЗ «О персональных данных» от 27 июля 2006 г.
+
+				p 8.6. В ходе обработки с персональными данными будут совершены следующие действия: сбор, запись, систематизация, накопление, хранение, уточнение (обновление, изменение), извлечение, использование, передачу (распространение, предоставление, доступ), обезличивание, блокирование, удаление, уничтожение.
+
+				p 8.7. Передача персональных данных третьим лицам осуществляется на основании законодательства Российской Федерации, договора с участием субъекта персональных данных или с согласия субъекта персональных данных. Пользователь не предоставляет согласие на возможную передачу своих персональных данных третьим лицам.
+
+				p 8.8. Персональные данные обрабатываются до прекращения деятельности сайта hkbusinessschool.com.
+
+				p 8.9. Согласие дается, в том числе, на информационные (рекламные) оповещения.
+
+				p 8.10. Пользователь может прекратить обработку своих персональных данных hkbusinessschool.com и удалить свой аккаунт на интернет-сайте hkbusinessschool.com путем отзыва Пользователем или его законным представителем согласия на обработку персональных данных, путем направления письменного заявления (запроса) в hkbusinessschool.com или ее представителю по адресу, указанному в начале Пользовательского Соглашения.
+
+				p 8.11. После получения соответствующего заявления (запроса) hkbusinessschool.com в течение 30 дней прекращает обработку и хранение персональных данных Пользователя, удаляя его персональные данные.
+
+				p 8.12. В случае отзыва Пользователем или его законным представителем согласия на обработку персональных данных hkbusinessschool.com вправе продолжить обработку персональных данных без согласия субъекта персональных данных при наличии оснований, указанных в пунктах 2 – 11 части 1 статьи 6, части 2 статьи 10 и части 2 статьи 11 Федерального закона №152-ФЗ «О персональных данных» от 26.06.2006 г.
+
+				p 8.13. Настоящее согласие действует все время до момента прекращения обработки персональных данных, указанных в п.8.8. и п.8.10. данного соглашения.
+				h3 9. Заключительные положения
+				p 9.1. Правовые отношения, возникающие в связи с настоящим Пользовательским соглашением, регулируются законодательством Российской Федерации.
+
+				p 9.2. По вопросам, неурегулированным настоящим Пользовательским соглашением, Стороны руководствуются действующим законодательством Российской Федерации.
+				h3 Реквизиты 
+				p Р/с 40802810137800000012
+				p Ф. Оперу банка ВТБ (ПАО) в Санкт-Петербурге 
